--- a/assets/scss/_high-pixel-ratio.scss
+++ b/assets/scss/_high-pixel-ratio.scss
@@ -16,43 +16,44 @@
     .breadcrumb ul li:not(:last-child):after,
     input[type=radio]:checked,
     input[type=checkbox]:checked {
-        background-size: round(image-width(sprite-path($sprite2x)) / 2) round(image-height(sprite-path($sprite2x)) / 2) !important;
+        background-size: round($sprite_width / 2) round($sprite_height / 2) !important;
+        //background-size: 50% 50% !important;
         background-image: $sprite2x !important;
     }
 
     .js.enable-mobile-menu .page-container .mobile-menu-btn:after {
-        @include sprite-pos($sprite2x, 'menu', true);
+        @include sprite-pos($menu, true);
     }
 
     .logbox .notifs-links .ico-link .notif-text {
         &.ico-messages {
-            @include sprite-pos($sprite2x, 'messages', true);
+            @include sprite-pos($messages, true);
         }
         &.ico-notifs {
-            @include sprite-pos($sprite2x, 'notifications', true);
+            @include sprite-pos($notifications, true);
         }
         &.ico-alerts {
-            @include sprite-pos($sprite2x, 'alerts', true);
+            @include sprite-pos($alerts, true);
         }
         &.ico-params {
-            @include sprite-pos($sprite2x, 'params', true);
+            @include sprite-pos($params, true);
         }
     }
 
     .breadcrumb ul li:not(:last-child):after {
-        @include sprite-pos($sprite2x, 'ariane', true);
+        @include sprite-pos($ariane, true);
     }
 
     .search form button:after {
-        @include sprite-pos($sprite2x, 'search', true);
+        @include sprite-pos($search, true);
     }
 
     .main .content-container h2 {
         &.ico-articles:after {
-            @include sprite-pos($sprite2x, 'articles', true);
+            @include sprite-pos($articles, true);
         }
         &.ico-tutorials:after {
-            @include sprite-pos($sprite2x, 'tutorials', true);
+            @include sprite-pos($tutorials, true);
         }
     }
 
@@ -64,10 +65,10 @@
     .content-container,
     #modals {
         input[type=radio]:checked {
-            @include sprite-pos($sprite2x, 'radio', true);
+            @include sprite-pos($radio, true);
         }
         input[type=checkbox]:checked {
-            @include sprite-pos($sprite2x, 'check', true);
+            @include sprite-pos($check, true);
         }
     }
 
@@ -80,16 +81,16 @@
         .article-content,
         .message-content {
             .information.ico-after:after {
-                @include sprite-pos($sprite2x, 'information', true);
+                @include sprite-pos($information, true);
             }
             .question.ico-after:after {
-                @include sprite-pos($sprite2x, 'question', true);
+                @include sprite-pos($question, true);
             }
             .error.ico-after:after {
-                @include sprite-pos($sprite2x, 'error', true);
+                @include sprite-pos($error, true);
             }
             .warning.ico-after:after {
-                @include sprite-pos($sprite2x, 'warning', true);
+                @include sprite-pos($warning, true);
             }
         }
     }
@@ -104,249 +105,249 @@
         &.online,
         &.view {
             &:after {
-                @include sprite-pos($sprite2x, 'view', true);
+                @include sprite-pos($view, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'view-blue', true);
+                @include sprite-pos($view-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'view-light', true);
+                @include sprite-pos($view-light, true);
             }
         }
         &.edit {
             &:after {
-                @include sprite-pos($sprite2x, 'edit', true);
+                @include sprite-pos($edit, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'edit-blue', true);
+                @include sprite-pos($edit-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'edit-light', true);
+                @include sprite-pos($edit-light, true);
             }
         }
         &.alert {
             &:after {
-                @include sprite-pos($sprite2x, 'alert', true);
+                @include sprite-pos($alert, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'alert-blue', true);
+                @include sprite-pos($alert-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'alert-light', true);
+                @include sprite-pos($alert-light, true);
             }
         }
         &.cite {
             &:after {
-                @include sprite-pos($sprite2x, 'cite', true);
+                @include sprite-pos($cite, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'cite-blue', true);
+                @include sprite-pos($cite-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'cite-light', true);
+                @include sprite-pos($cite-light, true);
             }
         }
 
         &.tick {
             &:after {
-                @include sprite-pos($sprite2x, 'tick', true);
+                @include sprite-pos($tick, true);
             }
             &.green:after {
-                @include sprite-pos($sprite2x, 'tick-green', true);
+                @include sprite-pos($tick-green, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'tick-light', true);
+                @include sprite-pos($tick-light, true);
             }
         }
 
         &.upvote {
             &:after {
-                @include sprite-pos($sprite2x, 'thumb-up', true);
+                @include sprite-pos($thumb-up, true);
             }
             &.voted:after {
-                @include sprite-pos($sprite2x, 'thumb-up-voted', true);
+                @include sprite-pos($thumb-up-voted, true);
             }
         }
         &.downvote {
             &:after {
-                @include sprite-pos($sprite2x, 'thumb-down', true);
+                @include sprite-pos($thumb-down, true);
             }
             &.voted:after {
-                @include sprite-pos($sprite2x, 'thumb-down-voted', true);
+                @include sprite-pos($thumb-down-voted, true);
             }
         }
 
         &.lock {
             &:after {
-                @include sprite-pos($sprite2x, 'lock', true);
+                @include sprite-pos($lock, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'lock-blue', true);
+                @include sprite-pos($lock-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'lock-light', true);
+                @include sprite-pos($lock-light, true);
             }
         }
 
         &.more {
             &:after {
-                @include sprite-pos($sprite2x, 'more', true);
+                @include sprite-pos($more, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'more-blue', true);
+                @include sprite-pos($more-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'more-light', true);
+                @include sprite-pos($more-light, true);
             }
         }
         &.cross {
             &:after {
-                @include sprite-pos($sprite2x, 'cross', true);
+                @include sprite-pos($cross, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'cross-blue', true);
+                @include sprite-pos($cross-blue, true);
             }
             &.red:after {
-                @include sprite-pos($sprite2x, 'cross-red', true);
+                @include sprite-pos($cross-red, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'cross-light', true);
+                @include sprite-pos($cross-light, true);
             }
             &.white:after {
-                @include sprite-pos($sprite2x, 'cross-white', true);
+                @include sprite-pos($cross-white, true);
             }
         }
         &.pin {
             &:after {
-                @include sprite-pos($sprite2x, 'pin', true);
+                @include sprite-pos($pin, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'pin-blue', true);
+                @include sprite-pos($pin-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'pin-light', true);
+                @include sprite-pos($pin-light, true);
             }
         }
         &.beta {
             &:after {
-                @include sprite-pos($sprite2x, 'beta', true);
+                @include sprite-pos($beta, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'beta-blue', true);
+                @include sprite-pos($beta-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'beta-light', true);
+                @include sprite-pos($beta-light, true);
             }
         }
         &.gear {
             &:after {
-                @include sprite-pos($sprite2x, 'gear', true);
+                @include sprite-pos($gear, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'gear-blue', true);
+                @include sprite-pos($gear-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'gear-light', true);
+                @include sprite-pos($gear-light, true);
             }
         }
         // TODO : faire une vraie icône offline
         &.offline,
         &.arrow-right {
             &:after {
-                @include sprite-pos($sprite2x, 'arrow-right', true);
+                @include sprite-pos($arrow-right, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'arrow-right-blue', true);
+                @include sprite-pos($arrow-right-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'arrow-right-light', true);
+                @include sprite-pos($arrow-right-light, true);
             }
         }
         &.arrow-left {
             &:after {
-                @include sprite-pos($sprite2x, 'arrow-left', true);
+                @include sprite-pos($arrow-left, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'arrow-left-blue', true);
+                @include sprite-pos($arrow-left-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'arrow-left-light', true);
+                @include sprite-pos($arrow-left-light, true);
             }
         }
         &.move {
             &:after {
-                @include sprite-pos($sprite2x, 'move', true);
+                @include sprite-pos($move, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'move-blue', true);
+                @include sprite-pos($move-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'move-light', true);
+                @include sprite-pos($move-light, true);
             }
         }
         &.star {
             &:after {
-                @include sprite-pos($sprite2x, 'star', true);
+                @include sprite-pos($star, true);
             }
             &.yellow:after {
-                @include sprite-pos($sprite2x, 'star-yellow', true);
+                @include sprite-pos($star-yellow, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'star-blue', true);
+                @include sprite-pos($star-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'star-light', true);
+                @include sprite-pos($star-light, true);
             }
         }
 
         &.download {
             &:after {
-                @include sprite-pos($sprite2x, 'download', true);
+                @include sprite-pos($download, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'download-blue', true);
+                @include sprite-pos($download-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'download-light', true);
+                @include sprite-pos($download-light, true);
             }
         }
 
         &.import {
             &:after {
-                @include sprite-pos($sprite2x, 'import', true);
+                @include sprite-pos($import, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'import-blue', true);
+                @include sprite-pos($import-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'import-light', true);
+                @include sprite-pos($import-light, true);
             }
         }
 
         &.history {
             &:after {
-                @include sprite-pos($sprite2x, 'history', true);
+                @include sprite-pos($history, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'history-blue', true);
+                @include sprite-pos($history-blue, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'history-light', true);
+                @include sprite-pos($history-light, true);
             }
         }
 
         &.rss {
             &:after {
-                @include sprite-pos($sprite2x, 'rss', true);
+                @include sprite-pos($rss, true);
             }
             &.blue:after {
-                @include sprite-pos($sprite2x, 'rss-blue', true);
+                @include sprite-pos($rss-blue, true);
             }
             &.orange:after {
-                @include sprite-pos($sprite2x, 'rss-orange', true);
+                @include sprite-pos($rss-orange, true);
             }
             &.light:after {
-                @include sprite-pos($sprite2x, 'rss-light', true);
+                @include sprite-pos($rss-light, true);
             }
         }
     }
