rajoute le titre dans le mail

--- a/templates/email/notification/new.html
+++ b/templates/email/notification/new.html
@@ -6,7 +6,7 @@
     Bonjour <strong>{{ username }}</strong>,
     <br />
     <br />
-    <strong>{{ author }}</strong> a répondu a un topic que vous suivez sur Zeste de Savoir.
+    <strong>{{ author }}</strong> a répondu au sujet "{{title}}" que vous suivez sur Zeste de Savoir.
     <br />
     <br />
     Pour le lire, <a href="{{ url }}">cliquez ici</a>
