--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -2432,6 +2432,170 @@ form.topic-message {
     }
 }
 
+/* ==============
+    ALL: Gallery
+   ============== */
+
+.gallery {
+    &.grid-view {
+        .gallery-item {
+            position: relative;
+            width: 200px;
+            height: 200px;
+            float: left;
+            border: 10px solid white;
+            overflow: hidden;
+
+            margin: 10px;
+
+            box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
+
+            .gallery-image-checkbox {
+                position: absolute;
+                top: 5px;
+                left: 5px;
+                margin: 0;
+                opacity: 0;
+                transition: opacity $default-transition-duration ease;
+            }
+
+            .gallery-image {
+                overflow: hidden;
+                img {
+                    min-height: 100%;
+                    width: 100%;
+                }
+            }
+
+            .gallery-image-caption {
+                height: 15px;
+                background-color: rgba(255, 255, 255, 1);
+                position: absolute;
+                bottom: -35px;
+                left: 0;
+                right: 0;
+                padding: 5px 20px;
+                font-size: 1.5rem;
+                line-height: 15px;
+                padding-top: 10px;
+                color: #444;
+
+                transition: bottom $default-transition-duration ease;
+
+                .legend { display: none; }
+            }
+            
+            &:hover, &:focus, &.selected {
+                .gallery-image-checkbox {
+                    opacity: 1;
+                }
+                .gallery-image-caption {
+                    bottom: 0;
+                    color: #444;
+                }
+            }
+
+            &.selected {
+                border-color: $helpful;
+                .gallery-image-caption {
+                    background-color: $helpful;
+                }
+            }
+
+            &.add-image {
+                font-size: 120px;
+                font-weight: bold;
+                line-height: 200px;
+                text-align: center;
+                background-color: #DDD;
+                border-color: #DDD;
+                box-shadow: none;
+
+                &:hover {
+                    background-color: #CCC;
+                }
+
+                a, a:hover, a:focus {
+                    transition: none;
+                    color: #AAA;
+                    display: block;
+                    text-decoration: none;
+                }
+            }
+        }
+        clear: both;
+
+        &:after {
+            content: "";
+            display: block;
+            clear: both;
+        }
+    }
+
+    &.list-view {
+        $gallery-image-size: 60px;
+        clear: both;
+
+        border-bottom: 1px solid #FFF;
+        border-top: 1px solid #CCC;
+
+        .gallery-item {
+            .gallery-image-checkbox {
+                float: left;
+                line-height: 100%;
+                margin: (($gallery-image-size - 15px) / 2) 0;
+            }
+
+            .gallery-image {
+                float: left;
+                width: $gallery-image-size;
+                height: $gallery-image-size;
+                overflow: hidden;
+
+                margin: 0 10px;
+
+                img {
+                    min-height: 100%;
+                    width: 100%;
+                }
+            }
+
+            .gallery-image-caption {
+                float: left;
+                height: 40px;
+                margin: (($gallery-image-size - 40px) / 2) 0;
+
+                .title {
+                    height: 20px;
+                    font-size: 16px;
+                    font-size: 1.6rem;
+                    line-height: 20px;
+                    color: #333;
+                }
+                .legend {
+                    height: 20px;
+                    line-height: 20px;
+                    color: #777;
+                }
+            }
+
+            &.selected {
+                background-color: $helpful;
+            }
+            
+            &.add-image {
+                display: none;
+            }
+
+            height: $gallery-image-size;
+            padding: 10px;
+            border-top: 1px solid #FFF;
+            border-bottom: 1px solid #CCC;
+            overflow: hidden;
+            clear: both;
+        }
+    }
+}
 
 
 /* ===================
