--- a/templates/gallery/gallery/details.html
+++ b/templates/gallery/gallery/details.html
@@ -55,47 +55,43 @@
             {% endfor %}
         </ul>
     </div>
-
+    
+    <!-- Beurk, pas beau! 
     {% if gallery_mode.is_write %}
         {% crispy form %}
     {% endif %}
+    -->
 
 
     <form id="form" name="form" method="POST" action="{% url "zds.gallery.views.modify_image" %}">
         <input type="hidden" name="gallery" value="{{ gallery.pk }}">
 
-        <table class="fullwidth">
-            <thead>
-               <tr>
-                   <th style="width: 3%;"></th>
-                   <th style="width: 180px;">Image</th>
-                   <th style="width: 72%;">Titre</th>
-               </tr>
-            </thead>
-            <tbody>
-                {% for img in gallery.get_images %}
-                    <tr>
-                        <td>
-                            <input name="items" type="checkbox" value="{{ img.pk }}">
-                        </td>
-                        <td>
-                            <a href="{% url "zds.gallery.views.edit_image" gallery.pk img.pk %}">
-                                <img src="{{ img.physical.url }}"
-                                     data-caption="{{ img.title }}"
-                                     alt="{{ img.title }}">
-                            </a>
-                        </td>
-                        <td>
-                            <a href="{% url "zds.gallery.views.edit_image" gallery.pk img.pk %}">
-                                {{ img.title }}
-                            </a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="gallery list-view">
+            {% for img in gallery.get_images %}
+            <div class="gallery-item">
+                <a href="{% url "zds.gallery.views.edit_image" gallery.pk img.pk %}">
+                    <div class="gallery-image-checkbox">
+                        <input name="items" type="checkbox" value="{{ img.pk }}" />
+                    </div>
+                    <div class="gallery-image">
+                        <img src="{{ img.physical.url }}"
+                             data-caption="{{ img.title }}"
+                             alt="{{ img.title }}">
+                    </div>
+                    <div class="gallery-image-caption">
+                        <div class="title">{{ img.title }}</div>
+                        <div class="legend">{{ img.legend }}</div>
+                    </div>
+                </a>
+            </div>
+            {% endfor %}
 
-        <button name="delete_multi">Supprimer</button>
+            <div class="gallery-item add-image">
+                <a href="{% url "zds.gallery.views.new_image" gallery.pk %}">+</a>
+            </div>
+        </div>
+        
+        <button class="btn btn-grey" name="delete_multi">Supprimer</button>
 
         {% csrf_token %}
     </form>
