Hotfix: JS & CSS pour la page de Teasing

--- a/templates/newsletter/base.html
+++ b/templates/newsletter/base.html
@@ -12,7 +12,7 @@
 <body>
     {% block content %}{% endblock %}
 
-    <script src="{% static "js/jquery.min.js" %}"></script>
+    <script src="{% static "js/vendors/jquery.js" %}"></script>
     <script src="{% static "js/newsletter.js" %}"></script>
 </body>
 </html>
