--- a/templates/base.html
+++ b/templates/base.html
@@ -515,7 +515,10 @@
         <footer class="page-footer">
             <div class="wrapper">
                 <p>
-                    Zeste de Savoir &bull; 2014 &bull; Version : <a href="{{git_version.url}}">{{git_version.name}}</a>
+                    Zeste de Savoir &bull; 2014
+                    <span class="version">
+                        &bull; Version : <a href="{{git_version.url}}">{{git_version.name}}</a>
+                    </span>
                 </p>
                 <ul>
                     <li><a href="{% url "zds.pages.views.eula" %}">CGU</a></li>
