Mathjax ne se declenche que pour les dollars

--- a/templates/base.html
+++ b/templates/base.html
@@ -552,7 +552,8 @@
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {
-                inlineMath: [['$', '$'], ['\\(', '\\)']],
+                inlineMath: [['$', '$']],
+                displayMath: [['$$','$$']],
                 processEscapes: true,
             },
             TeX: { extensions: ["color.js", "cancel.js", "enclose.js", "bbox.js", "mathchoice.js", "newcommand.js", "verb.js", "unicode.js", "autobold.js", "MathZoom.js"] },
