numéro de la CNIL

--- a/templates/pages/eula.html
+++ b/templates/pages/eula.html
@@ -47,7 +47,7 @@
         Le site est hébergé par OVH dont le siège social est situé 2 rue Kellermann - 59100 Roubaix - France.
     </p>
     <p>
-        Le site est enregistré auprès de la CNIL sous le numéro [numéro d'enregistrement].
+        Le site est enregistré auprès de la CNIL sous le numéro 1771020.
     </p>
 
     <h3>3. Définitions</h3>
