--- a/templates/member/index.html
+++ b/templates/member/index.html
@@ -20,15 +20,23 @@
 
 
 
-{# TODO : A mon avis, ça ne doit pas être top comme affichage #}
 {% block content %}
     <p>
-        Sur cette page vous pourrez trouver la liste des membres inscrits au site (actuellement {{ members.count }} membres).
+        Sur cette page vous pourrez trouver la liste des membres inscrits au site (actuellement {{ count }} membres).
     </p>
 
-    <p>
-        {% for member in members %}
-            {% include "misc/member_item.part.html" %}
-        {% endfor %}
-    </p>
+
+    {% include "misc/pagination.part.html" with position="top" %}
+
+    <div class="authors">
+        <ul>
+            {% for member in members %}
+                <li>
+                    {% include "misc/member_item.part.html" with avatar=True %}
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+
+    {% include "misc/pagination.part.html" with position="bottom" %}
 {% endblock %}
