--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -1581,12 +1581,13 @@
         }
 
         figure {
+            margin: 0;
             text-align: center;
 
             img,
             video,
             pre,
-            code:first-child,
+            & > code,
             table,
             blockquote,
             embed,
@@ -1598,7 +1599,7 @@
             img,
             video,
             pre,
-            code:first-child {
+            & > code {
                 display: block;
             }
 
@@ -1607,22 +1608,22 @@
             }
             
             blockquote ~ figcaption {
+                margin: -35px 0 0 2%;
+                padding-left: 3px;
                 font-style: italic;
                 text-align: left;
+                color: #999;
 
-                a {
-                    color : #f8ad32;
-                }
                 p:before {
-                    content: "– ";
+                    content: "— ";
                 }
             }
         }
 
         blockquote {
             color : #777;
-            padding: 15px;
-            border-left: 3px solid #999;
+            padding: 0 2% 20px;
+            border-left: 5px solid #CCC;
         }
 
         code, kbd, pre, samp {
