Restaure le bouton de modération profile membre

--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -157,6 +157,11 @@
                 </li>
                 {% if perms.member.change_profile %}
                     <li>
+                        <a href="{% url "zds.member.views.settings_mini_profile" profile.user.username %}" class="ico-after edit blue">
+                            Modifier le profil
+                        </a>
+                    </li>
+                    <li>
                         <a href="#link-tuto-{{ profile.pk }}" class="open-modal ico-after tick green">
                             Attribuer un tuto SdZ
                         </a>
