--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -126,7 +126,7 @@
                         {% endfor %}
 
                         {% if topics|length <= 0 %}
-                            <li class="inactive"><span>Aucun sujet suivi</span></li>
+                            <li class="inactive"><em>Aucun sujet suivi</em></li>
                         {% endif %}
                     {% endwith %}
                 </ul>
