--- a/templates/mp/post/edit.html
+++ b/templates/mp/post/edit.html
@@ -37,7 +37,7 @@
     {% include "misc/message_form.html" with member=user %}
 
     {% if form.text.value %}
-        {% include "misc/previsualization.part.html" text=form.text.value %}
+        {% include "misc/previsualization.part.html" with text=form.text.value %}
     {% endif %}
 {% endblock %}
 
